Kortas to Aikštelė

--- a/resources/maizzle/emails/payments/reservationPaid.html
+++ b/resources/maizzle/emails/payments/reservationPaid.html
@@ -17,7 +17,7 @@
         <tr class="bg-gray-100">
           <th class="text-left p-2 border-b border-gray-200">Data</th>
           <th class="text-left p-2 border-b border-gray-200">Laikas</th>
-          <th class="text-left p-2 border-b border-gray-200">Kortas</th>
+          <th class="text-left p-2 border-b border-gray-200">Aikštelė</th>
         </tr>
       </thead>
 
