--- a/resources/maizzle/emails/payments/balanceTopUp.html
+++ b/resources/maizzle/emails/payments/balanceTopUp.html
@@ -1,10 +1,10 @@
 <x-main>
   <div class="space-y-6">
-    <h1 class="m-0 text-2xl/8 text-slate-900 font-semibold">
+    <h1 class="m-0 text-2xl/8 text-blumine-900 font-semibold">
       Sveiki, @{{ $payment->owner->first_name }},
     </h1>
 
-    <p class="m-0 text-base/6 text-slate-600">
+    <p class="m-0 text-base/6 text-blumine-600">
       Informuojame, kad jūsų paskyros balansas buvo sėkmingai papildytas.
     </p>
 
@@ -18,7 +18,7 @@
       </li>
     </ul>
 
-    <x-button href="@{{ $appUrl }}/dashboard" class="bg-green-700 hover:bg-green-800">
+    <x-button href="@{{ $appUrl }}/dashboard" class="bg-blumine-700 hover:bg-blumine-800">
       Prietaisų skydelis
     </x-button>
   </div>
