--- a/resources/maizzle/emails/payments/planSubscribe.html
+++ b/resources/maizzle/emails/payments/planSubscribe.html
@@ -1,14 +1,14 @@
 <x-main>
   <div class="space-y-6">
-    <h1 class="m-0 text-2xl/8 text-slate-900 font-semibold">
+    <h1 class="m-0 text-2xl/8 text-blumine-900 font-semibold">
       Sveiki, @{{ $payment->owner->first_name }},
     </h1>
 
-    <p class="m-0 text-base/6 text-slate-600">
+    <p class="m-0 text-base/6 text-blumine-600">
       Džiaugiamės galėdami pranešti, kad Jūsų pasirinktas planas buvo sėkmingai @{{$renew ? 'pratęstas' : 'aktyvuotas'}}.
     </p>
 
-    <h3 class="text-lg/7 text-slate-900 font-semibold">
+    <h3 class="text-lg/7 text-blumine-900 font-semibold">
       Plano informacija:
     </h3>
 
@@ -22,7 +22,7 @@
       </li>
     </ul>
 
-    <x-button href="@{{ $appUrl }}/dashboard/plan" class="bg-green-700 hover:bg-green-800">
+    <x-button href="@{{ $appUrl }}/dashboard/plan" class="bg-blumine-700 hover:bg-blumine-800">
       Jūsų planas
     </x-button>
   </div>
