--- a/resources/maizzle/emails/reservationUnpaidReminder.html
+++ b/resources/maizzle/emails/reservationUnpaidReminder.html
@@ -6,7 +6,7 @@
 
     <p class="m-0 text-base/6 text-slate-600">
       Norime priminti, jog turite neapmokėtą rezervaciją: <strong>@{{ $reservation->start_time->format('Y-m-d H:i') }} - @{{ $reservation->end_time->format('H:i') }}</strong>.<br><br>
-      Jūsų balanso likučio nepakanka šiai sumai padengti, taip pat būtų viršytas leidžiamas balanso limitas (<strong>-100 eurų</strong>).<br><br>
+      Jūsų balanso likučio nepakanka šiai sumai padengti, taip pat būtų viršytas leidžiamas balanso limitas (<strong>-@{{ $reservation->owner->overdraft_limit }} €</strong>).<br><br>
       Prašome kuo skubiau apmokėti, kitu atveju rezervacija bus atšaukta likus <strong>@{{ $reservation->owner->cancel_before }}</strong> valandoms iki jos.
     </p>
 
