--- a/resources/maizzle/emails/payments/planSubscribe.html
+++ b/resources/maizzle/emails/payments/planSubscribe.html
@@ -14,7 +14,7 @@
 
     <ul class="list-disc">
       <li>
-        <strong>Pavadinimas:</strong> @{{ $payment->paymentable->name }}
+        <strong>Pavadinimas:</strong> @{{ $payment->paymentable->plan->name }}
       </li>
 
       <li>
