--- a/resources/maizzle/emails/subscriptionExpirationReminder.html
+++ b/resources/maizzle/emails/subscriptionExpirationReminder.html
@@ -5,7 +5,7 @@
     </h1>
 
     <p class="m-0 text-base/6 text-slate-600">
-      Norime priminti, kad jūsų planas <strong>„@{{ $user->subscription->plan->name}}“</strong> nustos galioti
+      Norime priminti, kad jūsų planas <strong>„@{{ $user->subscription->plan->plan->name}}“</strong> nustos galioti
       <strong>@{{ $days > 1 ? 'po ' . $days . ' dienų' : 'rytoj'}}</strong> tai yra @{{ $user->subscription->expired_at }}.
       Jei jūsų balanso likutis pakankamas, planas prasitęs automatiškai @{{ $user->subscription->expired_at->addSecond() }}. Tačiau jei balanso likutis per mažas, turite jį pratęsti patys.
     </p>
